update the readme file